// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when there is default loader 1`] = `
<div
  className="h-full flex items-center justify-center"
>
  <div
    className="loader"
  />
</div>
`;

exports[`renders correctly when there is loader with custom style 1`] = `
<div
  className="h-full flex items-center justify-center"
>
  <div
    className="loader"
    style={
      Object {
        "color": "orange",
        "height": "64px",
        "width": "64px",
      }
    }
  />
</div>
`;
